<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <View
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/container_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_man"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="69dp"
            android:contentDescription="@string/image_drinking_water"
            android:src="@drawable/bebaagua"
            app:layout_constraintTop_toTopOf="@+id/container_header"
            app:layout_constraintStart_toStartOf="@+id/container_header"
            />

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_refresh"
            android:contentDescription="@string/ic_refresh_window"
            android:layout_marginTop="75dp"
            app:layout_constraintTop_toTopOf="@+id/container_header"
            app:layout_constraintEnd_toEndOf="@+id/container_header"
            />

        <EditText
            android:id="@+id/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_peso"
            android:textColorHint="@android:color/holo_blue_dark"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/container_header"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_idade"
            android:textColorHint="@android:color/holo_blue_dark"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/container_header"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_degrade_button"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/text_btn_calcular"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/peso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:id="@+id/container_result"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/container_result_ml"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@id/button_calc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txt_result_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="35sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/container_result"
            app:layout_constraintStart_toStartOf="@+id/container_result"
            app:layout_constraintEnd_toEndOf="@+id/container_result"
            app:layout_constraintBottom_toBottomOf="@+id/container_result"/>

        <Button
            android:id="@+id/btn_lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_lembrete"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="26dp"
            android:textColor="@color/white"
            android:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/container_result"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btn_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_alarm"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:width="127dp"
            android:layout_margin="26dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/container_result"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hora"
            android:textSize="35sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="155dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btn_lembrete"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_dois_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dois_pontos"
            android:textSize="35sp"
            android:layout_marginTop="17dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btn_lembrete"
            app:layout_constraintStart_toEndOf="@+id/txt_hora"/>

        <TextView
            android:id="@+id/txt_minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_minutos"
            android:textSize="35sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btn_lembrete"
            app:layout_constraintStart_toEndOf="@+id/txt_dois_pontos"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>